--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "svg-url-loader": "^7.1.1",
     "ts-node": "^10.2.0",
     "typescript": "^4.3.5",
+    "url-loader": "^4.1.1",
     "webpack": "^5.46.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
