--- a/.env.example
+++ b/.env.example
@@ -12,11 +12,12 @@ APP_SETU_AA_ENDPOINT=https://aa-sandbox.setu.co/
 APP_SETU_CLIENT_API=00000000-0000-0000-0000-000000000000
 APP_JWS_AA_PRIVATEKEY=~/private.pem
 # REACT
+REACT_APP_PORT=3000
 REACT_CORS=*
 # Auth0
 AUTH0_DOMAIN=XXX
 AUTH0_CLIENT_ID=XXX
 AUTH0_REDIRECT_URI=http://localhost:8010/
 AUTH0_LOGOUT_URI=http://localhost:8010/
-# Debug
+# Developer
 DEBUG=False
