--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,22 @@
 version: '3.6'
 
 services:
+  # server:
+  #   image: atb00ker/insurance-ng
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile
+  #   volumes:
+  #     - ./private.pem:/go/src/app/private.pem:ro
+  #     - ./.env:/go/src/app/.env:ro
+  #     - react_data:/go/src/app/dist/
+  #   ports:
+  #     - 3000:3000
+  #   env_file:
+  #     - .env
+  #   depends_on:
+  #     - db
+
   db:
     image: postgres:alpine
     environment:
@@ -15,6 +31,18 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
+  # nginx:
+  #   image: nginx:alpine
+  #   ports:
+  #     - 8010:80
+  #   volumes:
+  #     - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+  #     - react_data:/etc/nginx/conf.d/dist/
+  #   entrypoint: [nginx, '-g', 'daemon off;']
+  #   depends_on:
+  #     - db
+  #     - server
+
   adminer:
     image: adminer
     restart: always
@@ -23,6 +51,7 @@ services:
 
 volumes:
   postgres_data: {}
+  react_data: {}
 
 networks:
   default:
