--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-bootstrap": "^1.6.1",
     "react-dom": "^16.8.0",
     "react-error-boundary": "^3.1.3",
+    "react-google-charts": "^2.0.29",
     "react-router-dom": "^5.2.0",
     "react-test-renderer": "^16.14.0",
     "react-use-websocket": "^2.7.1",
