--- a/deploy/nginx.conf
+++ b/deploy/nginx.conf
@@ -5,6 +5,14 @@ server {
       return 200 "Healthy\n";
   }
 
+  location /api/ws/ {
+      proxy_redirect off;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+      proxy_pass http://server:3000;
+  }
+
   location /api/ {
       proxy_pass http://server:3000;
   }
