--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
   #   ports:
   #     - 8010:80
   #   volumes:
-  #     - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
+  #     - ./deploy/nginx.conf:/etc/nginx/conf.d/default.conf:ro
   #     - react_data:/etc/nginx/conf.d/dist/
   #   entrypoint: [nginx, '-g', 'daemon off;']
   #   depends_on:
