--- a/.env.example
+++ b/.env.example
@@ -9,16 +9,19 @@ DB_HOST=localhost
 APP_PORT=3000
 APP_CORS=*
 APP_SETU_AA_ENDPOINT=https://aa-sandbox.setu.co/
+APP_RAHASYA_AA_ENDPOINT=https://rahasya.setu.co/
 APP_SETU_CLIENT_KEY=00000000-0000-0000-0000-000000000000
 APP_SETU_AA_KEY=00000000-0000-0000-0000-000000000000
-APP_JWS_AA_PRIVATEKEY=~/private.pem
-# REACT
-REACT_APP_PORT=3000
+APP_JWS_AA_PRIVATEKEY_PATH=./private.pem
+# React
 REACT_CORS=*
+REACT_APP_PORT=3000
 # Auth0
 AUTH0_DOMAIN=XXX
 AUTH0_CLIENT_ID=XXX
 AUTH0_REDIRECT_URI=http://localhost:8010/
 AUTH0_LOGOUT_URI=http://localhost:8010/
+# Nginx
+NGINX_DOMAIN=localhost
 # Developer
 DEBUG=False
