--- a/deploy/nginx/default.conf
+++ b/deploy/nginx/default.conf
@@ -31,7 +31,7 @@ server {
       return 200 "Healthy\n";
   }
 
-  location /api/ws/ {
+  location /api/v1/ws/ {
       proxy_redirect off;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
@@ -39,7 +39,7 @@ server {
       proxy_pass http://server:3000;
   }
 
-  location /api/ {
+  location /api/v1/ {
       proxy_pass http://server:3000;
   }
 
