--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "server": "env-cmd fresh -c gofresh.config",
     "react-start": "webpack serve --open --mode development",
     "react-build": "webpack --mode production",
+    "react-test": "node --inspect node_modules/.bin/jest --runInBand --detectOpenHandles",
     "format": "prettier --write \"src/**/*.(js|ts|tsx)\""
   },
   "repository": {
@@ -37,6 +38,7 @@
     "@types/react": "^16.8.0",
     "@types/react-dom": "^17.0.9",
     "@types/react-router-dom": "^5.1.8",
+    "@types/react-test-renderer": "^17.0.1",
     "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
     "bootstrap": "^5.1.1",
